test_suite/tests/ui/auto_enum/compile-fail.stderr
error: expected one of `)`, `,`, `.`, `?`, or an operator, found `..`
  --> $DIR/compile-fail.rs:11:26
   |
11 |         0 => marker!(1..8..),
   |                          ^^ expected one of `)`, `,`, `.`, `?`, or an operator here

error: `if` expression missing an else clause
  --> $DIR/compile-fail.rs:20:12
   |
20 |     } else if x > 3 {
   |            ^^

error: the `#[auto_enum]` attribute is required two or more branches or marker macros in total, there is only one branch or marker macro in this statement
  --> $DIR/compile-fail.rs:28:5
   |
28 | /     let iter = match x {
29 | |         _ if y < 0 => return y..=0,
30 | |         _ => 2..=10,
31 | |     };
   | |______^

error[E0425]: cannot find value `iter` in this scope
  --> $DIR/compile-fail.rs:34:14
   |
34 |         0 => iter.flat_map(|x| 0..x),
   |              ^^^^ not found in this scope

error[E0425]: cannot find value `iter` in this scope
  --> $DIR/compile-fail.rs:35:14
   |
35 |         _ => iter.map(|x| x + 1),
   |              ^^^^ not found in this scope

error[E0061]: this function takes 1 parameter but 2 parameters were supplied
 --> $DIR/compile-fail.rs:8:1
  |
8 | #[auto_enum(Iterator)]
  | ^^^^^^^^^^^^^^^^^^^^^^
  | |
  | defined here
  | expected 1 parameter

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0061, E0425.
For more information about an error, try `rustc --explain E0061`.
